--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <!--<script src="js/netNinja/9-Constructors.js"></script>-->
   <!--<script src="js/netNinja/10-Prototypes.js"></script>-->
   <!--<script src="js/netNinja/11-PrototypeInheritance.js"></script>-->
-  <script src="js/main.js"></script>
+  <script src="js/pokemon/data/types.js"></script>
+  <script src="js/pokemon/data/moves.js"></script>
+  <script src="js/pokemon/classes/basePokemon.js"></script>
+  <script src="js/pokemon/classes/initPokemonSpecies.js"></script>
+  <script src="js/pokemon/main.js"></script>
 </body>
 </html>
