Adding feedback icon to index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <input id="player2Name" type="text">
           <span class="inputErrorLog">Player must have a name!</span>
         </div>
-        <button class="customButton primaryButton">Go!</button>
+        <button class="customButton primaryButton" onClick="buttonCreateTrainer(this)">Go!</button>
+        <span class="feedbackIcon"></span>
       </div>
     </div>
   </div>
